--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -1645,107 +1645,107 @@ stories:
   domain: http://www.gazettextra.com/
   link: https://www.gazettextra.com/news/nation_world/concerts-fireworks-and-a-military-parade-mark-july-fourth/image_3de16f87-0065-5c4f-bf1a-3bd40869f67c.html
 images:
-- name: ellis-island-ellis-island-room-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-emily-carr.jpg
-- name: server-cloud1-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-nazi-poster.jpg
-- name: meadowbutterfly-meadow-butterfly-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-colorful-dream.jpg
-- name: legal-statue-legalstatue-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-monet-one.jpg
-- name: windowmountain-window-mountain-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-atari-asteroids.jpg
-- name: gears-4882162452-fa3126b38d-b-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-gan-vogh.jpg
-- name: razorcliff-razorcliff-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-marcel-duchamp.jpg
-- name: bluelake-hot-spicy-file-00-01-17-38.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-hot-spicy-file-00-01-17-38.jpg
-- name: subway-subway-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-blue-granite.jpg
-- name: yosemite-yosemite-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-wols.jpg
-- name: gypsy-wagon-gypsywagon-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-alberto-giacometti.jpg
-- name: downtown-trucksilo-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-monet-one.jpg
-- name: mosaic-face-mosaic-face-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-color.jpg
-- name: udnie-IMG_4746.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_4746.jpg
-- name: server-cloud-server-racks-door-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-alberto-giacometti.jpg
-- name: old-gas-pumps-oldgaspumps-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-crunch-paper.jpg
-- name: downtown-trucksilo-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purp-paper.jpg
-- name: oldsmallboat-oldsmallboat-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-colorful-blocks.jpg
-- name: oldtrain-oldtrain-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-wols.jpg
-- name: machine-road-machine-road-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-electricity.jpg
-- name: sand-hand-sand-hand-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-nazi-poster.jpg
-- name: beach-clouds-lifeguard-beachclouds-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colored-circuits.jpg
-- name: oldhotel-oldhotel-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-dali.jpg
-- name: beach-rocks-beach-rocks-currents-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-yellow-collage.jpg
-- name: walled-garden-walled-garden-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-light-dali.jpg
-- name: yuma-bank-yuma-bak-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-3.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
-- name: supreme-court-supremecourt-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-neo-instinct.jpg
-- name: mistywoods-babyfoot-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-kand-two.jpg
-- name: border-fence-border-fence-on-hill-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-granite.jpg
-- name: downtown-los-angeles-downtown-la-purp-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-purp-paper.JPG
-- name: old-school-house-old-schoolhouse-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-propaganda-leaflets.jpg
-- name: bluelake-dark-soul-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-dark-soul-file-00-00-38-67.jpg
-- name: crow-crow-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-colored-circuits.jpg
-- name: nyc-flag-nycflag-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-plentiful.jpg
-- name: statue-of-liberty-front-view-statueofliberty-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sunday.jpg
-- name: white-house-lawn-white-house-window-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-constitution.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-oily-mcoilface.jpg
-- name: cargo-ship-cargo-ship-on-sea-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-kandinsky-bv.jpg
-- name: berlinwall2-berlinwall-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-dark-dali.jpg
-- name: art-museum-art-museum-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-yellow-paper.jpg
-- name: razorwire-DSC-0080-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-marcel-duchamp.jpg
-- name: old-church-oldchurch-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-alien-goggles.jpg
-- name: yosemite-yosemite-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-space-pizza.jpg
-- name: nyc-flag-nycflag-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-purple-pond.jpg
-- name: trucksilo-trucksilo-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-monet-one.jpg
-- name: old-door-lock-old-door-lock-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-really-hot.jpg
-- name: statue-of-liberty-front-view-statueofliberty-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-aqua.jpg
-- name: subway-subway-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-spagetti-accident.jpg
-- name: aws-s3-square-68-161-800-500-0-max-0--5--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1-square.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
+- name: cargo-ship-cargo-ship-on-sea-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-mucha-mult.jpg
+- name: stories-green-gears-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-green-gears-matrix.jpg
+- name: wind-mills-windmills-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-emily-carr.jpg
+- name: sand-hand-sand-hand-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-3.jpg
+- name: nyc-flag-nycflag-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-creativity.jpg
+- name: border-fence-border-fence-on-hill-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-pablo-blue.jpg
+- name: dragon_close-up-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-copper-circuit.jpg
+- name: mistywoods-babyfoot-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dali-three.jpg
+- name: victoria-victoria-corner-hotel-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-blue-circuit.jpg
+- name: old-door-lock-old-door-lock-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-oily-mcoilface.jpg
+- name: trucksilo-trucksilo-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-circuit.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+- name: scream-DSC_0079.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0079.jpg
+- name: store-on-corner-oldcabin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gan-vogh.jpg
+- name: power-lines-power-lines-empty-space-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-purple-pond.jpg
+- name: wind-mills-windmills-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-clean-view.jpg
+- name: window-window-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-hot-spicy.jpg
+- name: school-clouds-church-clouds-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-light-dali.jpg
+- name: fence-fence-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-electricity.jpg
+- name: white-house-lawn-white-house-lawn-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-far-away.jpg
+- name: old-house-oldhouse-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-yellow-collage.jpg
+- name: berlinwall-DSC-0084-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-kand-two.jpg
+- name: blossombar-colorful-dream-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-24-99.jpg
+- name: white-house-lawn-white-house-lawn-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dark-soul.jpg
+- name: beach-rocks-beach-rocks-currents-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-far-away.jpg
+- name: berlinwall2-berlinwall-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-paper.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-collage.jpg
+- name: old-granary-field-granaryfield-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-smooth-ride.jpg
+- name: trucksilo-trucksilo-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crafty-painting.jpg
+- name: razorwire-DSC-0080-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-emily-carr.jpg
+- name: beach-clouds-lifeguard-beachclouds-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crabapple.jpg
+- name: white-house-whitehouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-clean-view.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-feed-people.JPG
+- name: white-house-lawn-white-house-window-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-crabapple.jpg
+- name: old-house-oldhouse-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-granite.jpg
+- name: nazi-invasion-dark-hallway.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dark-hallway.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
+- name: miamibeach-miamibeach-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-alberto-giacometti.jpg
+- name: berlinwall-DSC-0084-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-dark-soul.jpg
+- name: oldroad-old-road-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
+- name: powerlines-power-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-asteroids.jpg
+- name: nyc-flag-nycflag-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-blocks.jpg
+- name: abandonedbuildings_cinnamon_rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_cinnamon_rolls.jpg
+- name: oldhousecars-house-old-cars-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-light-dali.jpg
+- name: wave-DSC_0291.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0291.jpg
+- name: school-clouds-church-clouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-crunch-paper.jpg
+- name: crow-crow-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dark-soul.jpg
+- name: oldhouse-granaryfield-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-cinnamon-rolls.jpg
+- name: gypsymosaic-gypsy-eyes-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-hot-spicy.jpg
+- name: amusement-park-amusement-park-2-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-clean-view.jpg
+- name: adam-smith-adam-smith-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-circuit-5.jpg
 ---
 In Hong Kong, Colonial Flag Still A Symbol Of Prized Values.&nbsp;Amusement Park Reminder Of Hurricane May Soon Come Down.&nbsp;Leopard Football Welcomes Trio Brown, Finley And Pennington To Coaching Staff.&nbsp;Garmin's InReach Mini Satellite Device Essential For Backcountry Travel.&nbsp;Welcome Mat Winners Announced.&nbsp;Trump Celebrates 'greatest Political Journey' In History.&nbsp;Accused Burglar Offers Homeowner Meth Hit.&nbsp;Pastor Gregory Ryan Wolfe.&nbsp;
